--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
+    command: bash -c "chown -R postgres:postgres /var/lib/postgresql/data && postgres"
+    # change rules to allow usage of volume
   app:
     build: ./
     ports:
